[gd_scene load_steps=6 format=3 uid="uid://b0lb2yvobtw8i"]

[ext_resource type="Texture2D" uid="uid://ctbqq3uceym1q" path="res://Art/Tile_Map/Dongeon/Stair.png" id="1_6nah6"]
[ext_resource type="Script" path="res://Scenes/Levels/Dongeons/Dungeons_Props/stairs.gd" id="1_puyda"]
[ext_resource type="AudioStream" uid="uid://b1pbwrwin4eoe" path="res://Art/Audio/LTTP_Stairs_Up.wav" id="3_whj5b"]
[ext_resource type="AudioStream" uid="uid://d0pum67d7a7b7" path="res://Art/Audio/LTTP_Stairs_Down.wav" id="4_u38nr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4x3m"]
size = Vector2(33, 51)

[node name="Stairs_Dungon" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_puyda")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6nah6")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_p4x3m")

[node name="Stair_Up" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_whj5b")
max_polyphony = 3
bus = &"SFX"

[node name="Stair_Down" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_u38nr")
max_polyphony = 3
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
